# daydreamer

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  TODO  appveyor.yml  attack.c  attack.cc  bal.c  bayes  bayes_compare  benchmark.c  bitboard.c  bitboard.h  board.h  book.c  book_ctg.c  book_ctg.cc  book_poly.c  build.rs  compatibility.c  compatibility.h  console.c  ctg.c  daydreamer.c  daydreamer.h  debug.c  debug.h  driver.c  driver.cc  egbb.c  egbb.h  epd.c  eval.c  eval.cc  eval.h  eval_endgame.c  eval_king.c  (+56 more)
ci/: before_deploy.sh  script.sh
gtb/: Makefile  gtb-probe.c
gtb/compression/: wrap.c
gtb/compression/huffman/: hzip.c
gtb/compression/lzma/: LzmaDec.c
gtb_1/: Makefile  readme.txt
gtb_1/compression/lzma/: LzFind.c  LzmaEnc.c
gtb_1/sysport/: sysport.h
src/: bitboard.rs  board.rs  eval.rs  macros.rs  main.rs  movegen.rs  movement.rs  options.rs  perft.rs  position.rs  score.rs  search.rs  transposition.rs  uci.rs
tests/: mate.epd  shortwac.epd  wac.epd
tests/results/: 2009_07_24_roce50.pgn  wac.epd_2009_06_30_noquiesce  wac.epd_2009_06_30_quiesce  wac.epd_2009_06_30_seeq  wac.epd_2009_07_21_extend  wac.epd_2009_07_21_trans  wac.epd_2009_07_22_order
util/: bayes  bench.rc  bench.sh  clean.epd  fcp_template.ini  polyglot.ini  scp_template.ini  self_play  xboard  xboard_hg
v1/: Makefile  board.h  book_poly.cc  compatibility.h  eval_pieces.cc  format.cc  hash.cc  hash.h  makefile.mingw  move.cc  move_generation.cc  move_selection.cc  output.cc  position.cc  static_exchange_eval.cc  trans_table.cc  version.h
