[package]
name = "baru"
version = "0.1.0"
authors = ["akb <aaron@falsesharing.com>"]
build = "build.rs"

[dependencies]
lazy_static = "0.1.*"
rand = "*"
time = "*"

[profile.release]
opt-level = 3
#debug = true
debug-assertions = false
lto = true
# TODO: experiment with lto = true and panic = 'abort'
