[package]
name = "daydreamer"
version = "0.1.0-pre"
authors = ["akb <aaron@falsesharing.com>"]
build = "build.rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
lazy_static = "0.1.*"
rand = "*"

[profile.release]
opt-level = 3
#debug = true
debug-assertions = false
# lto = true is too slow for normal development
# lto = true
